# aoc

./: day1.py  day2.py  day6.py  day7.py  pyproject.toml
2022/: README.md  day1.go  day2.go  day3.go  day4.go  go.mod  main.go  utils.go
2023/: day3.py  day4.py  day5.py
2024/: day1.py  day2.py  day3.py  day4.py  day4_viz.py  day5.py  pyproject.toml
2024/test/: day4.py
2024/tools/: observability.py
data/: day1b-sample
